[project]
name = "so-challenge"
version = "0.1.0"
description = "Stack Overflow Challenge project with data fetching and visualization"
authors = [
    { name = "Jay Padhara" }
]
dependencies = [
    "pandas",
    "matplotlib",
    "requests"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"